@@ -16,7 +16,7 @@
   +----------------------------------------------------------------------+
 */
 
-/* $Id: xp_ssl.c,v 1.22.2.3.2.10 2007/12/31 07:20:09 sebastian Exp $ */
+/* $Id: xp_ssl.c,v 1.22.2.3.2.11 2008/04/08 14:11:49 jorton Exp $ */
 
 #include "php.h"
 #include "ext/standard/file.h"
@@ -728,7 +728,7 @@ static int php_openssl_sockop_cast(php_stream *stream, int castas, void **ret TS
 
 		case PHP_STREAM_AS_FD_FOR_SELECT:
 			if (ret) {
-				*ret = (void*)sslsock->s.socket;
+				*(int *)ret = sslsock->s.socket;
 			}
 			return SUCCESS;
 
@@ -738,7 +738,7 @@ static int php_openssl_sockop_cast(php_stream *stream, int castas, void **ret TS
 				return FAILURE;
 			}
 			if (ret) {
-				*ret = (void*)sslsock->s.socket;
+				*(int *)ret = sslsock->s.socket;
 			}
 			return SUCCESS;
 		default:
