@@ -4,6 +4,8 @@ PHP                                                                        NEWS
 - Fixed bug #44667 (proc_open() does not handle pipes with the mode 'wb'
   correctly). (Jani)
 - Fixed bug #44591 (imagegif's filename parameter). (Felipe)
+- Fixed bug #32979 (OpenSSL stream->fd casts broken in 64-bit build)
+  (stotty at tvnet dot hu)
 
 03 Apr 2008, PHP 5.2.6RC4
 - Fixed possible stack buffer overflow in FastCGI SAPI. (Andrei Nigmatulin)
